# dactl-plugin

./: LICENSE  README.md  meson.build  meson_options.txt
data/: meson.build
data/config/: plugin.xml
src/: __plugin__.gresource.xml  __plugin__.plugin  common.vala  dbus-service.vala  factory.vala  meson.build  plugin-template.gresource.xml  plugin-template.plugin  plugin.vala
src/config/: meson.build  plugin-config.c  plugin-config.h  plugin-config.vapi
src/styles/: layout.css
src/ui/: control.ui  control.vala
tests/: dbus-service-test.vala  meson.build
vapi/: libdactl-1.0.vapi  libmodbus.vapi
